--- a/index.html
+++ b/index.html
@@ -1,25 +1,94 @@
-<header class="site-header">
-  <div class="container nav-wrap">
-    <a class="brand" href="#" aria-label="GitHub">
-      <!-- Icono GitHub de la izquierda -->
-      <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true">
-        <path d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.2 3.4 9.6 8.1 11.2.6.1.8-.3.8-.6v-2.1c-3.3.7-4-1.4-4-1.4-.6-1.5-1.4-1.9-1.4-1.9-1.1-.7.1-.7.1-.7 1.2.1 1.9 1.2 1.9 1.2 1.1 1.9 2.9 1.4 3.6 1.1.1-.8.4-1.4.7-1.7-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.6 1.2-3.5-.1-.3-.5-1.7.1-3.6 0 0 1-.3 3.5 1.3a12 12 0 0 1 6.4 0c2.5-1.6 3.5-1.3 3.5-1.3.6 1.9.2 3.3.1 3.6.7.9 1.2 2.1 1.2 3.5 0 4.8-2.9 5.9-5.7 6.2.4.3.8 1 .8 2.1v3.1c0 .3.2.8.8.6 4.7-1.6 8.1-6 8.1-11.2A11.5 11.5 0 0 0 12 .5Z"/>
-      </svg>
-    </a>
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Portfolio – Andres Ferreiro</title>
+  <meta name="description" content="Portfolio personal de Andres Ferreiro: proyectos, currículum e intereses." />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container">
+      <a class="logo" href="#inicio" aria-label="Inicio">🧑‍💻</a>
 
-    <!-- Botón hamburguesa (se activará más tarde con JS) -->
-    <button id="menu-toggle" class="hamburger" aria-label="Abrir menú" aria-expanded="false">
-      <span></span><span></span><span></span>
-    </button>
+      <!-- Botón hamburguesa para móvil (lo hare funcional más tarde) -->
+      <button class="menu-toggle" aria-expanded="false" aria-controls="nav">☰</button>
 
-    <nav class="main-nav" aria-label="Principal">
-      <ul id="nav-links">
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#proyectos">Proyectos</a></li>
-        <li><a href="#curriculum">Currículum</a></li>
-        <li><a href="#intereses">Intereses personales</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
+      <nav id="nav" class="site-nav" aria-label="Principal">
+        <ul>
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#proyectos">Proyectos</a></li>
+          <li><a href="#curriculum">Currículum</a></li>
+          <li><a href="#intereses">Intereses</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main id="inicio">
+    <section class="hero section" aria-labelledby="bienvenida">
+      <div class="container">
+        <h1 id="bienvenida">¡Bienvenido a mi portfolio!</h1>
+        <p>Aquí encontrarás un resumen de mi formación, mis intereses y algunos proyectos.</p>
+        <p class="cta">
+          <a class="btn" href="#proyectos">Ver proyectos</a>
+          <a class="btn btn-secondary" href="#contacto">Contacto</a>
+        </p>
+      </div>
+    </section>
+
+    <section id="proyectos" class="section" aria-labelledby="tit-proyectos">
+      <div class="container">
+        <h2 id="tit-proyectos">Proyectos</h2>
+        <div class="projects-grid">
+          <!-- Rellene 3 tarjetas reales más adelante -->
+        </div>
+      </div>
+    </section>
+
+    <section id="curriculum" class="section" aria-labelledby="tit-cv">
+      <div class="container">
+        <h2 id="tit-cv">Currículum</h2>
+        <!-- Contenido más adelante -->
+      </div>
+    </section>
+
+    <section id="intereses" class="section" aria-labelledby="tit-intereses">
+      <div class="container">
+        <h2 id="tit-intereses">Intereses personales</h2>
+        <!-- Contenido más adelante -->
+      </div>
+    </section>
+
+    <section id="contacto" class="section" aria-labelledby="tit-contacto">
+      <div class="container">
+        <h2 id="tit-contacto">Contacto</h2>
+        <!-- Formulario real más adelante -->
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <small>© <span id="year"></span> Tu Nombre</small>
+      <nav class="legal">
+        <a href="privacidad.html">Política de privacidad</a>
+        <a href="#" id="open-cookies">Cookies</a>
+      </nav>
+    </div>
+  </footer>
+
+  <!-- Banner de cookies (lo hare visible y funcional con JS mas adelante) -->
+  <div id="cookie-banner" class="cookie-banner" hidden>
+    <p>Este sitio usa cookies técnicas. Puedes aceptar o rechazar.</p>
+    <div class="cookie-actions">
+      <button id="cookies-accept">Aceptar</button>
+      <button id="cookies-reject">Rechazar</button>
+    </div>
   </div>
-</header>
+
+  <script src="js/main.js"></script>
+</body>
+</html>
